fix: padding .card-title; gap, padding, line-height .card__text-wrapper; media line-height card__tilte

--- a/styles/style.css
+++ b/styles/style.css
@@ -125,7 +125,7 @@
   font-size: 18px;
   line-height: 1.3;
   font-variation-settings: 'wght' var(--bold-font-weight);
-  padding: 4px 10px;
+  padding: 4px 10px 3px;
 }
 
 .image-wrapper {
@@ -194,10 +194,10 @@
 
 .card__text-wrapper {
   display: grid;
-  gap: 25px;
-  padding: 29px 25px 24px 25px;
+  gap: 26px;
+  padding: 26px 25px 25px;
   font-size: 18px;
-  line-height: 1.2;
+  line-height: 1.17;
 }
 
 .button-wrapper {
@@ -408,11 +408,7 @@
   }
 
   .card__title {
-    line-height: 1.2;
-  }
-
-  .card__text-wrapper {
-    line-height: 1.19;
+    line-height: 1.25;
   }
 
   .card__floppy-button {
